update : 목록 조회시 키워드 2개 제한